   * The XP required for an AMLA is now 50*level (and 25 for level 0) instead of
     always 150.
   * Increased the HP of the Great Mage from 55 to 60.
 * User interface
   * Removed waypoints UI feature
   * Added an option to disable the "loading save from a different version"
     confirmation dialog
   * Line-wrap author names in the add-on description dialog (bug #18691)
   * Added option in advanced preferences that allows the twelve-hour clock
      format to be used
   * Reenabled "delay shroud updates"
   * Changed: Disable pango markup in unit names (bug #17788)
   * It is now possible to remove multiple installed add-ons at the same
     time
   * Slowed units are now tinted to be recognizable at a glance
   * Fixed: Removed old markup style from OOS messages (bug #18387).
   * Fixed: OOS ignore toggle in the save dialog (bug #18330).
 * WML engine:
   * Readded the liminal alignment
   * Added four-difficulty versions of certain macros: QUANTITY4,
     ON_DIFFICULTY4, TURNS4, GOLD4, INCOME4, and ATTACK_DEPTH4
   * added support for SSF to SUF via a [filter_side] subtag
   * added support for [enemy_of]<SSF> to SSF
   * added support for [allied_with]<SSF> to SSF
   * New [find_path] tag, a WML interface to the pathfinder
   * Add inline SSF support to [store_starting_location]
   * Add support for [capture_village][filter_side]<SSF>
   * Added FACING, which adds facing= to a previous [unit] codeblock
   * Added VARIATION, which adds variation= to a previous [unit] codeblock
   * Deprecated the Add-on.cfg style in favor of Add-on/_main.cfg, except for
     the case of a single-file add-on
   * [illuminated_time], which has been obsolete for a long time, is no longer
     valid. Using it will cause errors to be thrown
   * Reintroduced support for [unit][event]s (was until 1.7.10, bug #16259)
     Such events are no longer forcefully variable substituted before inserting
     into the scenario wml