@@ -61,6 +61,8 @@ Version 1.9.9+svn:
    * Added an option to disable the "loading save from a different version"
      confirmation dialog
    * Line-wrap author names in the add-on description dialog (bug #18691)
+   * Made the Delete Add-on (in the server) option request confirmation from
+     the user before proceeding
    * Added option in advanced preferences that allows the twelve-hour clock
       format to be used
    * Reenabled "delay shroud updates"
